# CircuitPython_seeed_xiao_nRF52840

./: .readthedocs.yaml  LICENSE  README.rst  README.rst.license  pyproject.toml  requirements.txt  seeed_xiao_nrf52840.py
.github/workflows/: build.yml  release.yml
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst  requirements.txt
examples/: seeed_xiao_nrf52840_simpletest.py
